# switch

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  makefile  notes.md  pyproject.toml  run.py
grammar/: 00 - Modifications.md  00 - original_SPARQL.grammar  01 - SELECT_SPARQL.grammar  02 - SELECT_SPARQL.grammar  03 - SELECT_SPARQL.grammar  04 - SELECT_SPARQL.grammar  05 - SELECT_SPARQL.grammar  06 - SELECT_SPARQL.grammar  07 - SELECT_SPARQL.grammar  08 - SELECT_SPARQL.grammar  09 - SELECT_SPARQL.grammar  10 - SELECT_SPARQL.grammar  11 - SELECT_SPARQL.grammar  SPARQL_functions_mapping.txt  terminals.tokens
notebooks/: test_sparql_queries.ipynb
scripts/: setup_neo4j.sh  setup_test_dataset.py
test_queries/: test_query_1.sparql  test_query_10.sparql  test_query_11.sparql  test_query_12.sparql  test_query_2.sparql  test_query_3.sparql  test_query_4.sparql  test_query_5.sparql  test_query_6.sparql  test_query_7.sparql  test_query_8.sparql  test_query_9.sparql
tests/: conftest.py  test_cypher_tweaks.py  test_lexer.py  test_parser.py  test_parser_func_calls.py
tests/cypher_gen/: test_clauses_from_triples_obj.py  test_clauses_from_triples_prop.py  test_code_generation.py  test_cypher_conversion_results.py  test_expression_handler.py  test_match_clause.py  test_misc.py  test_results_modifiers.py  test_with_clause.py
tools/: 08_remove_unused.py  generate_rules.py
transpiler/: cypher_generator.py  exceptions.py  expression_handler.py  lexer.py  parser.py  parsetab.py
transpiler/structures/: query.py
transpiler/structures/nodes/: __init__.py  expression.py  (+7 more)
