[tool.poetry]
name = "switch"
version = "0.1.0"
description = "Transpiler from SPARQL to Cypher"
authors = ["Thiago Sant Helena <shthiago@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
pylint = "^2.11.1"
ply = "^3.11"
loguru = "^0.5.3"
Jinja2 = "^3.0.2"
coverage = "^6.3.2"
requests = "^2.27.1"
rdflib = "^6.1.1"
antlr4-python3-runtime = "^4.10"
neo4j = "^4.4.2"

[tool.black]
line-length = 88
target-version = ['py37']
include = 'transpiler/'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
